--- a/source/_scss/foundations/modules/_post.scss
+++ b/source/_scss/foundations/modules/_post.scss
@@ -22,7 +22,6 @@
 
 .post-content {
   @extend %centered;
-  text-align: justify;
 
   h1 {
     text-align: center;
@@ -30,5 +29,9 @@
 
   img {
     max-width: 100%;
+  }
+
+  p {
+    text-align: justify;
   }
 }
